Inserção da explicação:)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial de git</title>
-    <h1>Titulo === </h1>
+    <h1>Titulo</h1>
+    <p>git log: todo o histórico</p>
+    <br>
+    <p>git diff</p>
+    <br>
+    <p>para se situar: git status</p>
+    <br>
+    <p>Para adiocnar mudancas: git add 'nome do projeto'</p>
+    <br>
+    <p>para commitar: git commit -a -u "FRASE QUE VAI APARECER"</p>
+    <br>
+    <P>para criar uma nova branch: git checkout -b nome_da_nova_branch</P>
+    <br>
+    <p>Para commitar na primira vex em uma branch nova: git push --set-upstream origin nome_da_nova_branch  </p>
 </head>
 <body>
     
