--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <br>
     <P>para criar uma nova branch: git checkout -b nome_da_nova_branch</P>
     <br>
-    <p>Para commitar na primira vex em uma branch nova: git push --set-upstream origin nome_da_nova_branch  </p>
+    <p>Para commitar na primira vex em uma branch nova: git push --set-upstream origin nome_da_nova_branch </p>
+    <p>Para a origem com branch existente: git push</p>
+    <p>Não sei usar o git :(</p>
+    <p>para cancelar commit: rm -f .git/nome_do_arquivo.lock    </p>
 </head>
 <body>
     
