Não seiu como faz

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial de git</title>
-    <h1>Titulo</h1>
+    <h1>Git para min 15-10-2024</h1>
     <p>git log: todo o histórico</p>
     <br>
     <p>git diff</p>
@@ -18,9 +18,20 @@
     <P>para criar uma nova branch: git checkout -b nome_da_nova_branch</P>
     <br>
     <p>Para commitar na primira vex em uma branch nova: git push --set-upstream origin nome_da_nova_branch </p>
+    <br>
     <p>Para a origem com branch existente: git push</p>
+    <br>
     <p>Não sei usar o git :(</p>
+    <br>
     <p>para cancelar commit: rm -f .git/nome_do_arquivo.lock    </p>
+    <br>
+    <h1>Observações</h1>
+    <p>Quando adicionar o arquivo com o "git add .", é obrigatorio usar "git commit -m" para commitar</p>
+    <p>Quando adicionar estiver em uma branch e quiser salvar, já estando na branch, use: "git push", se for o primeiro 
+        commit da branch é necessario usar:"git branch -M main nome_da_nova_branch"
+    </p>
+    <p>Quando adicionar estiver em uma branch e quiser salvar, já estando na branch, use: "git push"</p>
+
 </head>
 <body>
     
